# TIM_Raytracing

./: .gitignore  CMakeLists.txt  README.md
data/: .gitignore  cornell.mtl
data/longboard/: Longboard Pintail N240522.mtl
src/: BVHBuilder.cpp  BVHBuilder.h  SimpleCamera.cpp  SimpleCamera.h  main.cpp  postprocessPass.cpp  postprocessPass.h  raytracingPass.cpp  raytracingPass.h  resourceAllocator.cpp  resourceAllocator.h  shaderMacros.h
src/Renderer/: BVHBuilder.cpp  BVHBuilder.h  BVHData.cpp  BVHData.h  BVHGeometry.cpp  BVHGeometry.h  LightProbField.cpp  LightProbField.h  OBJLoader.h  Scene.cpp  Scene.h  SimpleCamera.cpp  SimpleCamera.h  TextureManager.cpp  TextureManager.h  TriBoxCollision.hpp  lightProbFieldPass.cpp  lightProbFieldPass.h  postprocessPass.cpp  postprocessPass.h  raytracingPass.cpp  raytracingPass.h  resourceAllocator.cpp  resourceAllocator.h  shaderMacros.h  tiny_obj_loader.h
src/ShaderCompiler/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderFlags.h
src/Shaders/: .gitignore  baseRaytracingPass.glsl  bvhBindings.fxh  bvhBindings.glsl  bvhCollision.fxh  bvhCollision.glsl  bvhGetter.fxh  bvhGetter.glsl  bvhLighting.fxh  bvhLighting.glsl  bvhTraversal.fxh  bvhTraversal.glsl  bvhTraversal_inline.glsl  cameraPass.comp  collision.fxh  collision.glsl  copyImage.comp  cullFrustum.fxh  cullFrustum.glsl  genLightProbField.comp  lighting.fxh  lighting.glsl  lightprob.glsl  lightprobBindings.glsl  lightprobHelpers.glsl  linearToSrgb.comp  math.fxh  math.glsl  mergeImage.comp  primitive_cpp.fxh  primitive_cpp.glsl  rayBouncePass.comp  rayStorageHelpers.glsl  struct_cpp.fxh  struct_cpp.glsl  system.fxh  system.glsl  tonemap.comp  tonemapFunctions.glsl  updateLightProbField.comp
src/Shaders/bvh/: bvhBindings.glsl  bvhBindings_cpp.glsl  bvhCollision.glsl  bvhGetter.glsl  bvhLighting.glsl  bvhTraversal.glsl  bvhTraversal_inline.glsl
src/Shaders/core/: collision.glsl  lighting.glsl  math.glsl  primitive_cpp.glsl  system.glsl
src/Shaders/lightprob/: fetchSH_inline.glsl  lightprob.glsl  lightprobHelpers.glsl  storeSH_inline.glsl
src/rtDevice/private/: Buffer.h  Common.cpp  Common.h  Image.cpp  Image.h  PipelineStateCache.cpp  PipelineStateCache.h  RenderContext.cpp  RenderContext.h  (+2 more)
src/timCore/: Common.cpp  Common.h  flat_hash_map.h  hash.h  linalg.h  type.h
(+14 files in other folders)
